# myApp

./: .env.example  .gitignore  MIGRATION_PROGRESS.md  PRD_Development_Plan.md  README.md  development_tasks.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  project_structure.md  technical_specifications.md  todo
.claude/: settings.local.json
.superdesign/design_iterations/: dashboard.html  dashboard_theme.css  login_1.html  login_2.html  login_3.html  login_4.html  login_theme.css  ocr_theme_1.css  ocr_upload_1.html  parsing_icon_1.html  register.html
Specs/: PRD_Development_Plan.md  development_tasks.md  technical_specifications.md  technology_review.md
backend/: .env  Dockerfile  OCR_SETUP.md  alembic.ini  dev.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251118_add_question_images_fields.py  20251222_add_collections_and_categories.py  20251226_change_question_content_to_json.py  31071ba7d1d9_create_questions_and_documents_tables.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  collections.py  ocr.py  questions.py
backend/app/models/: __init__.py  collection.py  question.py  user.py
backend/app/schemas/: __init__.py  collection.py  question.py  user.py
backend/app/services/: __init__.py  auth.py  ocr.py  ocr_integration.py  paddle_parser.py  paddle_parser.py.old  question_service.py  qwen_ocr.py
backend/app/utils/: auth.py
backend/scripts/: inspect_sqlite.py
docs/: AUTH_IMPLEMENTATION.md  CLOUD_SETUP.md  api.md  deployment.md  user-guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend-nextjs/: PERFORMANCE_OPTIMIZATIONS.md  next.config.js  package-lock.json  package.json
frontend-nextjs/src/app/: globals.css  layout.tsx  page.tsx
frontend-nextjs/src/app/app/: layout.tsx  page.tsx
frontend-nextjs/src/app/dashboard/: page.tsx
frontend-nextjs/src/app/login/: page.tsx
frontend-nextjs/src/app/register/: page.tsx
frontend-nextjs/src/components/common/: DynamicImport.tsx  (+8 more)
frontend-nextjs/src/lib/: AntdRegistry.tsx  api.ts  performance.ts  store.ts
frontend-nextjs/src/styles/: dashboard-theme.css
frontend-nextjs/src/types/: api.ts
frontend/public/: index.html
frontend/src/: App.jsx  setupTests.js
frontend/src/pages/: Dashboard.jsx  LoginPage.jsx  Papers.jsx  Questions.jsx  RegisterPage.jsx  Settings.jsx  Templates.jsx  Upload.jsx
frontend/src/services/: api.js
frontend/src/store/: index.js
frontend/src/styles/: auth.css  dashboard-theme.css  globals.css  upload.css
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh  setup.sh
(+23 files in other folders)
